--- a/R/syndromic_nyc.Rmd
+++ b/R/syndromic_nyc.Rmd
@@ -31,21 +31,35 @@ combo1$count<-as.numeric(as.character(combo1$count))
 saveRDS(combo1,'./Data/ili_resp.rds')
 ```
 
+Read in the data
+```{r}
+combo1<-readRDS('./Data/ili_resp.rds')
+```
+
+```{r}
+#select.syndrome<-"Respiratory"
+select.syndrome<-"Influenza-like illness (ILI)"
+
+```
+
 Reshape the data. For now, just focus on ILI
 ```{r}
-combo1.m<-melt(combo1[combo1$syndrome=="Influenza-like illness (ILI)",], id.vars=c('syndrome', 'borough','age_group','date'))
+combo1.m<-melt(combo1[combo1$syndrome==select.syndrome,], id.vars=c('syndrome', 'borough','age_group','date'))
 combo1.a<-dcast(combo1.m, date +borough+syndrome~age_group )
 ```
 
 
 ```{r}
 nyc<-combo1.a[combo1.a$borough=='Citywide',]
-nyc$age.rat<-(nyc$`Ages 65+ years`+0.5)/(nyc$`Ages 0-4 years`+0.5)
+#nyc<-combo1.a[combo1.a$borough=='Manhattan',]
+#nyc<-combo1.a[combo1.a$borough=='Queens',]
+#nyc<-combo1.a[combo1.a$borough=='Bronx',]
+
 ```
 
 
 ```{r}
-plot(nyc$date,nyc$`All age groups`, type='l', bty='l', main='ILI all ages in NYC')
+plot(nyc$date,nyc$"Ages 18-64 years", type='l', bty='l', main='ILI all ages in NYC')
 ```
 
 ```{r, fig.width=4, fig.height=6}
@@ -53,13 +67,20 @@ par(mfrow=c(2,1), mar=c(2,2,2,1))
 plot(nyc$date,nyc$`Ages 0-4 years`, type='l', bty='l', main='ILI <5 years in NYC')
 plot(nyc$date,nyc$`Ages 65+ years`, type='l', bty='l', main='ILI 65+ years in NYC')
 ```
-
-Ratio of ILI in 65+ vs <5 year old, citywide
-```{r}
-plot(nyc$date,log(nyc$age.rat), type='l', bty='l', main='ratio of 65+ and <5 year ILI in NYC', yaxt='n', ylab='Ratio')
+Plot ratio of 65+ to younger age groups for ILI
+```{r, fig.width=12, fig.height=4}
+ages<-c("Ages 0-4 years", "Ages 5-17 years",  "Ages 18-64 years" )
+plot.rat<-function(age.select){
+nyc$age.rat<-(nyc$`Ages 65+ years`+0.5)/(nyc[,age.select]+0.5)
+plot(nyc$date,log(nyc$age.rat), type='l', bty='l', main=paste0('ratio of 65+ and ',age.select), yaxt='n', ylab='Ratio')
 axis(side=2, at=-c(-5, -0.5, 0, 0.5), label=round(exp(c(-5, -0.5, 0, 0.5)),2) )
-
+}
+par(mfrow=c(1,3))
+lapply(ages, plot.rat)
 ```
+
+
+
 
 
 
