--- a/R/syndromic_nyc.Rmd
+++ b/R/syndromic_nyc.Rmd
@@ -13,6 +13,7 @@ knitr::opts_knit$set(root.dir = normalizePath("..")) #sets Working directory to 
 
 library(reshape2)
 library(lubridate)
+library(mgcv)
 ```
 
 Import the data and remove the unnecesary rows. Note that the file downloads as a .csv format, but it is actually a tab-separated file.
@@ -79,6 +80,27 @@ par(mfrow=c(1,3))
 lapply(ages, plot.rat)
 ```
 
+
+
+Create index to count number of days from July 1 each year
+```{r}
+nyc$"o65"<-nyc$`Ages 65+ years`
+nyc$"u5"<-nyc$`Ages 0-4 years`
+nyc$dow<-as.factor(weekdays(nyc$date))
+nyc$epiyr<-year(nyc$date)
+nyc$epiyr[month(nyc$date)<=6] <-nyc$epiyr[month(nyc$date)<=6]-1
+nyc$jul1.date<-as.Date(paste(epiyr,'07', '01', sep='-'), )
+nyc$day.index<- as.numeric(difftime(nyc$date , nyc$jul1.date, unit='days'))
+```
+
+```{r}
+mod2<-gam(cbind(nyc$o65, nyc$u5)~dow+s(day.index, bs='bs'), family=binomial, data=nyc)
+plot(mod1)
+pred2<-predict(mod2, type='response')
+raw.ratio<-(nyc$`Ages 65+ years`+0.5)/(nyc$`Ages 0-4 years`+0.5)
+plot(nyc$date, pred2, type='p')
+points(nyc$date,raw.ratio, col='red')
+```
 
 
 
