--- a/R/syndromic_nyc.Rmd
+++ b/R/syndromic_nyc.Rmd
@@ -40,8 +40,8 @@ combo1<-readRDS('./Data/ili_resp.rds')
 ```
 
 ```{r}
-#select.syndrome<-"Respiratory"
-select.syndrome<-"Influenza-like illness (ILI)"
+select.syndrome<-"Respiratory"
+#select.syndrome<-"Influenza-like illness (ILI)"
 
 ```
 
@@ -91,6 +91,11 @@ axis(side=2, at=-c(-5, -0.5, 0, 0.5), label=round(exp(c(-5, -0.5, 0, 0.5)),2) )
 par(mfrow=c(1,3))
 lapply(ages, plot.rat)
 ```
+Export for SATSCAN temporal clustering
+```{r}
+getwd()
+write.csv(nyc, file='../Data/nyc_resp.csv')
+```
 
 
 Model with smoothing spline for year
@@ -98,7 +103,7 @@ Model with smoothing spline for year
 mod2<-gam(cbind(nyc$o65, nyc$u5)~dow+s(day.index, bs='bs'), family=binomial, data=nyc)
 plot(mod2)
 pred2<-predict(mod2, type='response')
-raw.ratio<-(nyc$`Ages 65+ years`+0.5)/(nyc$`Ages 0-4 years`+0.5)
+raw.ratio<-(nyc$`Ages 65+ years`+0.5)/(nyc$`Ages 0-4 years`+nyc$`Ages 65+ years`)
 plot(nyc$date, pred2, type='p')
 points(nyc$date,raw.ratio, col='red')
 ```
@@ -111,7 +116,7 @@ bur1.fit<-bur1[bur1$date<as.Date('2020-02-01'),]
 
 mod2<-gam(cbind(bur1.fit$o65, bur1.fit$u5)~dow+s(day.index, bs='bs') +borough, family=binomial, data=bur1.fit)
 pred2<-predict(mod2, newdata=bur1,type='response')
-raw.ratio<-(bur1$`Ages 65+ years`+0.5)/(bur1$`Ages 0-4 years`+0.5)
+raw.ratio<-(bur1$`Ages 65+ years`+0.5)/(bur1$`Ages 0-4 years`+bur1$`Ages 65+ years`)
 plot(bur1$date, pred2, type='p')
 ```
 Pointwise log likelihood
@@ -150,6 +155,35 @@ plot(bur1$date, pred.rw1)
 
 
 
+Aggregate by week
+```{r}
+nyc$weekdate<-floor_date(nyc$date, unit='week')
+nyc.agg<-aggregate(nyc[,c('u5','o65')], by=list('weekdate'=nyc$weekdate), FUN=sum)
+
+ratio.wk<-nyc.agg$o65/nyc.agg$u5
+```
+
+```{r}
+plot(nyc.agg$weekdate, ratio.wk)
+```
+```{r}
+nyc.agg$epiyr<-year(nyc.agg$weekdate)
+nyc.agg$epiyr[month(nyc.agg$weekdate)<=6] <-nyc.agg$epiyr[month(nyc.agg$weekdate)<=6]-1
+nyc.agg$jul1.date<-as.Date(paste(nyc.agg$epiyr,'07', '01', sep='-'), )
+nyc.agg$season.index<- as.numeric(difftime(nyc.agg$weekdate , nyc.agg$jul1.date, unit='weeks'))
+nyc.agg$index<-1:nrow(nyc.agg)
+
+mod2<-gam(cbind(nyc.agg$o65, nyc.agg$u5)~ s(season.index, bs='bs') +s(index, bs='bs'), family=binomial, data=nyc.agg)
+plot(mod2)
+pred2<-predict(mod2, type='response')
+raw.ratio<-(nyc.agg$o65+0.5)/(nyc.agg$u5+nyc.agg$o65)
+plot(nyc.agg$weekdate, pred2, type='p')
+points(nyc.agg$weekdate,raw.ratio, col='red')
+
+obs.exp<-raw.ratio/pred2
+plot(nyc.agg$weekdate, obs.exp)
+abline(h=1)
+```
 
 
 
