--- a/R/syndromic_nyc.Rmd
+++ b/R/syndromic_nyc.Rmd
@@ -19,9 +19,14 @@ library(inlabru)
 library(MMWRweek)
 library(cdcfluview)
 library(gtrendsR)
+library(rjags)
 ```
 
+## Read in the data
+
 Import the data and remove the unnecesary rows. Note that the file downloads as a .csv format, but it is actually a tab-separated file.
+
+This pulls in the ILI syndromic data from Epiquery in NYC
 ```{r, eval=F}
 ili1<- read.table('./Data/ILI_2020_3_8.csv',sep="\t", header=TRUE, skipNul = T) 
 resp1<-read.table('./Data/resp_2020_3_8.csv',sep="\t", header=TRUE, skipNul = T) 
@@ -40,12 +45,11 @@ saveRDS(combo1,'./Data/ili_resp.rds')
 ```
 
 
-## Read in the data
 ```{r}
 combo1<-readRDS('./Data/ili_resp.rds')
 ```
 
-NREVSS flu data
+This pulls in the NREVSS syndromic data from CDC (not currently being used)
 ```{r}
 flu<-read.csv('./Data/FluSurveillance_EIP_New York - Albany_Data.csv', skip=2)
 #nrevss<-who_nrevss(region=c('state'))
@@ -59,7 +63,7 @@ flu<-read.csv('./Data/FluSurveillance_EIP_New York - Albany_Data.csv', skip=2)
 #ph.ny<-ph.ny[ph.ny$region=='New York',]
 ```
 
-google searches for RSV in NYC. can get 5 years of historical data
+Pulls in google searches for RSV in NYC. can get 5 years of historical data at weekly reslution (switches to monthly for >5 years)
 ```{r}
 rsv.down<-gtrends(keyword = 'RSV', geo="US-NY-501", time = "today+5-y",
 gprop = c("web") , category = 0,  low_search_volume = FALSE)
@@ -77,34 +81,27 @@ names(rsv)<-c('date','rsv.searches','MMWRyear','MMWRweek')
 select.syndrome<-"Influenza-like illness (ILI)"
 ```
 
-Reshape the ILI data, aggregate by MMWR date. For now, just focus on ILI
+## Reshape the ILI data 
+Aggregate by MMWR date. For now, just focus on ILI
 ```{r}
 combo1$MMWRday<-NULL
 combo1$date<-NULL
 
 combo1.m<-melt(combo1[combo1$syndrome==select.syndrome,], id.vars=c('syndrome', 'borough','age_group','MMWRyear','MMWRweek'))
 combo1.a<-dcast(combo1.m, MMWRyear+MMWRweek +borough+syndrome~age_group, fun.aggregate = sum )
-```
-
-
-
-```{r}
 combo1.a$"o65"<-combo1.a$`Ages 65+ years`
 combo1.a$"u5"<-combo1.a$`Ages 0-4 years`
 combo1.a$epiyr<-combo1.a$MMWRyear
 combo1.a$epiyr[combo1.a$MMWRweek<=26] <-combo1.a$epiyr[combo1.a$MMWRweek<=26] -1
 combo1.a$date.index<- combo1.a$MMWRyear +combo1.a$MMWRweek/52-1/52
-
 ```
 
+## Explore the city-wide data from NYC
 ```{r}
 nyc<-combo1.a[combo1.a$borough=='Citywide',]
 #nyc<-combo1.a[combo1.a$borough=='Manhattan',]
-#nyc<-combo1.a[combo1.a$borough=='Queens',]
-#nyc<-combo1.a[combo1.a$borough=='Bronx',]
 
 ```
-
 
 ```{r}
 plot(nyc$date.index,nyc$"Ages 18-64 years", type='l', bty='l', main='ILI all ages in NYC')
@@ -115,6 +112,7 @@ par(mfrow=c(2,1), mar=c(2,2,2,1))
 plot(nyc$date.index,nyc$`Ages 0-4 years`, type='l', bty='l', main='ILI <5 years in NYC')
 plot(nyc$date.index,nyc$`Ages 65+ years`, type='l', bty='l', main='ILI 65+ years in NYC')
 ```
+
 Plot ratio of 65+ to younger age groups for ILI
 ```{r, fig.width=12, fig.height=4}
 ages<-c("Ages 0-4 years", "Ages 5-17 years",  "Ages 18-64 years" )
@@ -126,46 +124,19 @@ axis(side=2, at=-c(-5, -0.5, 0, 0.5), label=round(exp(c(-5, -0.5, 0, 0.5)),2) )
 par(mfrow=c(1,3))
 lapply(ages, plot.rat)
 ```
-Export for SATSCAN temporal clustering
-```{r}
-#write.csv(nyc, file='../Data/nyc_resp.csv')
-```
 
 
-```{r, echo=F, eval=F}
-#Model with smoothing spline for year; cc=cyclic cubic spline
-mod2<-gam(cbind(nyc$o65, nyc$u5)~  s(MMWRweek , bs='cc'), family=binomial, data=nyc)
-plot(mod2)
-pred2<-predict(mod2, type='response')
-raw.ratio<-(nyc$`Ages 65+ years`+0.5)/(nyc$`Ages 0-4 years`+nyc$`Ages 65+ years`)
-plot(nyc$date.index, pred2, type='p')
-points(nyc$date.index,raw.ratio, col='red')
-```
 
 Disaggregated boroughs data. 
 ```{r}
 bur1<- combo1.a[combo1.a$borough != 'Citywide',]
 bur1$borough<-factor(bur1$borough)
-bur1.fit<-bur1[bur1$date.index< 2020,]
 ```
 
-Fit through Jan 2020, then extrapolate seasonal baseline forward
-```{r}
-mod2<-gam(cbind(bur1.fit$o65, bur1.fit$u5)~s(MMWRweek , bs='cc') +borough, family=binomial, data=bur1.fit)
-pred2<-predict(mod2, newdata=bur1,type='response')
-raw.ratio<-(bur1$`Ages 65+ years`+0.5)/(bur1$`Ages 0-4 years`+bur1$`Ages 65+ years`)
-plot(bur1$date.index, pred2, type='p')
-```
-
-Pointwise log likelihood
-```{r}
-log.like.mod2<- -dbinom(bur1$o65,bur1$o65+ bur1$u5,pred2, log=T)
-plot(bur1$date.index, log.like.mod2)
-abline(v=2020, lty=2, col='gray', bty='l')
-```
 
 
 ## Prepare data for JAGS
+Create a 4D array with all of the data
 
 ```{r}
 ili<-combo1[combo1$syndrome==select.syndrome & combo1$age_group %in% c('Ages 0-4 years','Ages 65+ years'),  c('age_group','syndrome', 'borough','MMWRyear','MMWRweek','count')]
@@ -211,7 +182,121 @@ points(scale(ili.a[,'Citywide','1','rsv.searches']), col='gray')
 
 #Cross correlation
 ccf(ili.a[,'Citywide','1','ili'], ili.a[,'Citywide','1',"rsv.searches"], na.action=na.omit)
+```
 
+
+```{r}
+###############
+#JAGS Model
+###############
+model_string<-"
+
+model{
+
+for(i in 1:n.space){
+
+   for(t in 1:n.time){
+
+      y.kid[i,t] ~ dpois(lambda.kid[i,t])
+      log(lambda.kid[i,t]) <- alpha1[i] + beta[1,i]*sqrt.flu[t] + beta[2,i]*sqrt.rsv[t] + non.flu.kid[t]
+    
+      y.adult[i,t] ~ dpois(lambda.adult[i,t])
+      log(lambda.adult[i,t]) <- alpha2[i] + delta[1,i]*sqrt.flu[t] + delta[2,i]*sqrt.rsv[t] + non.flu.adult[t]
+    
+    
+      #     x[i,t,]%*%gamma +          
+      #            beta0 + beta0_space[i] +  
+      #             (beta1 + beta1_space[i])*(t - theta_space[i])*ifelse((t >= theta_space[i]), 1, 0)
+
+
+      }
+
+   #beta0_space[i] ~ dnorm(0.00, 0.0001)
+   #beta1_space[i] ~ dnorm(0.00, 0.0001)
+   #theta_space[i] ~ dcat(pi)
+
+}
+   
+non.flu.kid[1]~  dnorm(0, 1e-4)
+non.flu.adult[1]~ dnorm(0, 1e-4)
+for(t in 2:n.time){
+  non.flu.kid[t]~dnorm(non.flu.kid[t-1], tau.kid)
+  non.flu.adult[t]~dnorm(non.flu.adult[t-1], tau.adult)
+}
+
+for(j in 1:n.space){
+alpha1[j] ~ dnorm(0,1e-4)
+alpha2[j] ~ dnorm(0, 1e-4)
+
+for(k in 1:2){
+ beta[k,j]~ dnorm(0, 1e-4)
+ delta[k,j]~dnorm(0, 1e-4)
+
+}
+}
+
+
+
+tau.kid<-1/sd.kid^2
+sd.kid~dunif(0,100)
+tau.adult<-1/sd.adult^2
+sd.adult~dunif(0,100)
+
+beta0 ~ dnorm(0.00, 0.0001)
+beta1 ~ dnorm(0.00, 0.0001)
+# for(j in 1:p_x){
+#    gamma[j] ~ dnorm(0.00, 0.0001)
+# }
+
+# pi ~ ddirch(alpha[1:n.time])
+# for(j in 1:n.time){
+#    alpha[j]<-1.00
+#    }
+
+}
+"
 
 ```
 
+Call model
+```{r}
+  ##############################################################
+  #Model Fitting
+  ##############################################################
+  inits1=list(".RNG.seed"=c(123), ".RNG.name"='base::Wichmann-Hill')
+  inits2=list(".RNG.seed"=c(456), ".RNG.name"='base::Wichmann-Hill')
+  inits3=list(".RNG.seed"=c(789), ".RNG.name"='base::Wichmann-Hill')
+  burnN=5000
+  sampleN=10000
+  ##############################################
+  #Model Organization
+  ############################################
+  
+
+  model_spec<-textConnection(model_string)
+  model_jags<-jags.model(model_spec, 
+                         inits=list(inits1,inits2, inits3),
+                         data=list('y.kid' = t(clean.array.jags[,,'1','ili']),
+                                   'y.adult' = t(clean.array.jags[,,'5','ili']),
+                                   'sqrt.rsv' =sqrt(clean.array.jags[,'Bronx','5','rsv.searches']), #same for all ages and boroughs
+                                   'sqrt.flu' =sqrt(clean.array.jags[,'Bronx','5','flu.rate']), #same for all ages and boroughs
+                                   'n.space'=dim(clean.array.jags)[2],
+                                   'n.time'=dim(clean.array.jags)[1]
+                                   ),
+                         n.adapt=burnN, 
+                         n.chains=3)
+  params<-c('beta','theta','gamma','log.rr.vax', 'delta','delta.adj', 'lambda')
+  
+  ##############################################
+  #Posterior Sampling
+  ##############################################
+  posterior_samples<-coda.samples(model_jags, 
+                                  params, 
+                                  n.iter=sampleN)
+  posterior_samples.all<-do.call(rbind,posterior_samples)
+  post_means<-apply(posterior_samples.all, 2, median)
+  sample.labs<-names(post_means)
+  ci<-t(hdi(posterior_samples.all, credMass = 0.95))
+  row.names(ci)<-sample.labs
+  names(post_means)<-sample.labs
+```
