--- a/R/syndromic_nyc.Rmd
+++ b/R/syndromic_nyc.Rmd
@@ -20,6 +20,7 @@ library(MMWRweek)
 library(cdcfluview)
 library(gtrendsR)
 library(rjags)
+library(HDInterval)
 ```
 
 ## Read in the data
@@ -186,6 +187,44 @@ ccf(ili.a[,'Citywide','1','ili'], ili.a[,'Citywide','1',"rsv.searches"], na.acti
 ```
 
 
+## simple gam
+```{r}
+clean.array.citywide<-ili.a[,c('Citywide'),c('1','5'),]
+
+y.kids = t(clean.array.citywide[,'1','ili'])
+y.adult = t(clean.array.citywide[,'5','ili'])
+        sqrt.rsv =sqrt(clean.array.citywide[,'5','rsv.searches']) #same for all ages and boroughs
+                 sqrt.flu =sqrt(clean.array.citywide[,'5','flu.rate']) #same for all ages and boroughs
+                 sqrt.flu[216]<-sqrt.flu[215]
+t<-1:length(y.kids)
+weekN<-rep(1:52, length.out=length(y.kids))
+
+ds.glm<-cbind.data.frame('weekN'=weekN,'y.kids'=y.kids[1,],'y.adult'=y.adult[1,],sqrt.rsv, sqrt.flu, t)
+mod1<-gam(y.adult~ sqrt.rsv+sqrt.flu +s(t,bs='bs') +s(weekN, bs='cc') , family='poisson', data=ds.glm)
+  plot(mod1) 
+pp1 <- predict(mod1, type = "terms")
+
+mod2<-gam(y.kids~ sqrt.rsv+sqrt.flu +s(t, bs='bs') +s(weekN, bs='cc') , family='poisson', data=ds.glm)
+  plot(mod2) 
+pp2 <- predict(mod2, type = "terms")
+
+diff1_2<- (pp2[,'s(t)']+ pp2[,'s(weekN)']) -(pp1[,'s(t)'] + + pp2[,'s(weekN)'])
+  plot(diff1_2)
+```
+
+
+```{r}
+date.string<-dimnames(ili.a)[[1]]
+dates<-unlist(strsplit(date.string, '_'))
+dates<-matrix(as.numeric(dates), ncol=2, byrow=T)
+epiyr<-dates[,1]
+epiyr[dates[,2]<=26] <- epiyr[dates[,2]<=26]-1
+epiyr.index<-epiyr-min(epiyr)+1
+```
+
+
+## Stage 1 model: 
+Estimate variation in ILI that is not associated with RSv or flu
 ```{r}
 ###############
 #JAGS Model
@@ -199,34 +238,20 @@ for(i in 1:n.space){
    for(t in 1:n.time){
 
       y.kid[i,t] ~ dpois(lambda.kid[i,t])
-      log(lambda.kid[i,t]) <- alpha1[i] + epsilon[1,i]*sqrt.flu[t] + epsilon[2,i]*sqrt.rsv[t] + non.flu.kid[i,t]
+      log(lambda.kid[i,t]) <- alpha1[i] + epsilon[epiyr.index[i],1,i]*sqrt.flu[t] + epsilon[epiyr.index[i],2,i]*sqrt.rsv[t] + non.flu.kid[i,t]
     
       y.adult[i,t] ~ dpois(lambda.adult[i,t])
-      log(lambda.adult[i,t]) <- alpha2[i] + delta[1,i]*sqrt.flu[t] + delta[2,i]*sqrt.rsv[t] + non.flu.adult[i,t]
+      log(lambda.adult[i,t]) <- alpha2[i] + delta[epiyr.index[i],1,i]*sqrt.flu[t] + delta[epiyr.index[i],2,i]*sqrt.rsv[t] + non.flu.adult[i,t]
     
     # We are interested in CHANGES in dufference between non.flu.adult[i,t] and non.flu.kid[i,t]
       
       diff_hat[i,t] <- non.flu.adult[i,t] - non.flu.kid[i,t] #difference bc on log scale
-      
-      
-      
-      #Model of true time series 
-     #  true.ratio[i,t] ~ dnorm(mu[i,t] , sigma2_epsilon_inv )
-      #mu[i,t] <-  beta0 + beta0_space[i] +  
-                  # (beta1 + beta1_space[i])*(t - theta_space[i])*ifelse((t >= theta_space[i]), 1, 0)
-
-
       }
-
-   beta0_space[i] ~ dnorm(0.00, 1e-4)
-   beta1_space[i] ~ dnorm(0.00, 1e-4)
-   theta_space[i] ~ dcat(pi)
-
 }
 
 for(i in 1:n.space){
-  non.flu.kid[i,1]~  dnorm(0, 1e-4)
-  non.flu.adult[i,1]~ dnorm(0, 1e-4)
+  non.flu.kid[i,1]   <- 0 #t=0 is captured by intercept
+  non.flu.adult[i,1] <- 0
 for(t in 2:n.time){
   non.flu.kid[i,t]~dnorm(non.flu.kid[i,t-1], tau.kid) #note shared tau for all time series
   non.flu.adult[i,t]~dnorm(non.flu.adult[i,t-1], tau.adult) #note shared tau for all time series
@@ -237,12 +262,21 @@ for(j in 1:n.space){
 alpha1[j] ~ dnorm(0,1e-4)
 alpha2[j] ~ dnorm(0, 1e-4)
 
-#todo: could shrink these
 for(k in 1:2){
- epsilon[k,j]~ dnorm(0, 1e-4)
- delta[k,j]~dnorm(0, 1e-4)
-
+for(m in 1:n.epiyr){
+ epsilon[m,k,j]~ dnorm(mu.epsilon[k], tau.epsilon[k])
+ delta[m,k,j]~dnorm(mu.delta[k], tau.delta[k])
+  } 
+ }
 }
+
+for(k in 1:2){
+  mu.epsilon[k]~dnorm(0, 1e-4)
+  mu.delta[k]~dnorm(0, 1e-4)
+  tau.delta[k]<-1/sd.delta[k]^2
+  tau.epsilon[k]<-1/sd.epsilon[k]^2
+  sd.delta[k]~dunif(0, 100)
+  sd.epsilon[k]~dunif(0, 100)
 }
 
 
@@ -254,18 +288,6 @@ sd.adult~dunif(0,100)
 
 beta0 ~ dnorm(0.00, 1e-4)
 beta1 ~ dnorm(0.00, 1e-4)
-sigma2_epsilon_inv <- 1/sigma2_epsilon
-sigma2_epsilon ~ dgamma(0.01, 0.01)
-
-# for(j in 1:p_x){
-#    gamma[j] ~ dnorm(0.00, 0.0001)
-# }
-
- pi ~ ddirch(alpha[1:n.time])
- for(j in 1:n.time){
-    alpha[j]<-1.00
-    }
-
 }
 "
 
@@ -294,11 +316,13 @@ Call model
                                    'sqrt.rsv' =sqrt(clean.array.jags[,'Bronx','5','rsv.searches']), #same for all ages and boroughs
                                    'sqrt.flu' =sqrt(clean.array.jags[,'Bronx','5','flu.rate']), #same for all ages and boroughs
                                    'n.space'=dim(clean.array.jags)[2],
-                                   'n.time'=dim(clean.array.jags)[1]
+                                   'n.time'=dim(clean.array.jags)[1],
+                                   'epiyr.index'=epiyr.index,
+                                   'n.epiyr'=max(epiyr.index)
                                    ),
                          n.adapt=burnN, 
                          n.chains=3)
-  params<-c('beta','theta','gamma','log.rr.vax', 'delta','delta.adj', 'lambda')
+  params<-c('diff_hat','non.flu.adult','non.flu.kid')
   
   ##############################################
   #Posterior Sampling
@@ -309,7 +333,19 @@ Call model
   posterior_samples.all<-do.call(rbind,posterior_samples)
   post_means<-apply(posterior_samples.all, 2, median)
   sample.labs<-names(post_means)
-  ci<-t(hdi(posterior_samples.all, credMass = 0.95))
-  row.names(ci)<-sample.labs
-  names(post_means)<-sample.labs
+  posterior_samples.mean<-apply(posterior_samples.all,2,mean)
+  posterior_samples.sd<-apply(posterior_samples.all,2,sd)
+
+  diff_hat_mean<-posterior_samples.mean[grep('diff_hat', names(posterior_samples.mean))]
+  diff_hat_mean<-matrix(diff_hat_mean,ncol=5, byrow=T)
+  
+  non.flu.kid.mean<-posterior_samples.mean[grep('non.flu.kid', names(posterior_samples.mean))]
+    non.flu.kid.mean<-matrix(non.flu.kid.mean,ncol=5, byrow=T)
+
+  non.flu.adult.mean<-posterior_samples.mean[grep('non.flu.adult', names(posterior_samples.mean))]
+    non.flu.adult.mean<-matrix(non.flu.adult.mean,ncol=5, byrow=T)
+    
 ```
+
+##Stage 2 model:
+
