--- a/R/syndromic_nyc.Rmd
+++ b/R/syndromic_nyc.Rmd
@@ -230,159 +230,13 @@ epiyr.index<-epiyr-min(epiyr)+1
 
 ## Stage 1 model: 
 Estimate variation in ILI that is not associated with RSv or flu. Simple poisson model where we have covariates for flu and RSV (with coefficients varying by year)
-```{r}
-###############
-#JAGS Model
-###############
-model_string<-"
-
-model{
-
-for(i in 1:n.space){
-
-   for(t in 1:n.time){
-
-      y.kid[i,t] ~ dpois(lambda.kid[i,t])
-      log(lambda.kid[i,t]) <- alpha1[i] + epsilon[epiyr.index[i],1]*sqrt.flu[t] + epsilon[epiyr.index[i],2]*sqrt.rsv[t] + t/n.time*epsilon3[i] +
-      non.flu.kid[i,t]
-    
-      y.adult[i,t] ~ dpois(lambda.adult[i,t])
-      log(lambda.adult[i,t]) <- alpha2[i] + delta[epiyr.index[i],1]*sqrt.flu[t] + delta[epiyr.index[i],2]*sqrt.rsv[t] + t/n.time*delta3[i]+  non.flu.adult[i,t]
-    
-    # We are interested in CHANGES in dufference between non.flu.adult[i,t] and non.flu.kid[i,t]
-      
-      diff_hat[i,t] <- non.flu.adult[i,t] - non.flu.kid[i,t] #difference bc on log scale
-      }
-}
-
-for(i in 1:n.space){
- delta3[i]~dnorm(0, tau.delta3)
- epsilon3[i]~dnorm(0, tau.epsilon3)
-  non.flu.kid[i,1]   <- 0 #t=0 is captured by intercept
-  non.flu.adult[i,1] <- 0
-for(t in 2:n.time){
-  non.flu.kid[i,t]~dnorm(alpha.kid*non.flu.kid[i,t-1], tau.kid) #note shared tau for all time series
-  non.flu.adult[i,t]~dnorm(alpha.adult*non.flu.adult[i,t-1], tau.adult) #note shared tau for all time series
-}
-}
-alpha.kid ~ dunif(0,1)
-alpha.adult ~dunif (0,1)
-tau.delta3<-1/sd.delta3^2
-sd.delta3~dunif(0,100)
-tau.epsilon3<-1/sd.epsilon3^2
-sd.epsilon3~dunif(0,100)
-
-for(j in 1:n.space){
-alpha1[j] ~ dnorm(0,1e-4)
-alpha2[j] ~ dnorm(0, 1e-4)
-}
-for(k in 1:2){
-for(m in 1:n.epiyr){
- epsilon[m,k]~ dnorm(mu.epsilon[k], tau.epsilon[k])
- delta[m,k]~dnorm(mu.delta[k], tau.delta[k])
-  } 
- }
-
-
-for(k in 1:2){
-  mu.epsilon[k]~dnorm(0, 1e-4)
-  mu.delta[k]~dnorm(0, 1e-4)
-  tau.delta[k]<-1/sd.delta[k]^2
-  tau.epsilon[k]<-1/sd.epsilon[k]^2
-  sd.delta[k]~dunif(0, 100)
-  sd.epsilon[k]~dunif(0, 100)
-}
-
- ## Splines CHECK priors
-  for (i in 1:1) { b[i] ~ dnorm(0,0.00049) }
-  ## prior for s(weekN)... 
-  K1 <- S1[1:13,1:13] * lambda[1] 
-  b[2:14] ~ dmnorm(zero[2:14],K1) 
-  ## smoothing parameter priors CHECK...
-  for (i in 1:1) {
-    lambda[i] ~ dgamma(.05,.005)
-    rho[i] <- log(lambda[i])
-  }
-
-tau.kid<-1/sd.kid^2
-sd.kid~dunif(0,100)
-tau.adult<-1/sd.adult^2
-sd.adult~dunif(0,100)
-
-beta0 ~ dnorm(0.00, 1e-4)
-beta1 ~ dnorm(0.00, 1e-4)
-}
-"
-
-```
-
-Call model
-```{r}
-  ##############################################################
-  #Model Fitting
-  ##############################################################
-  inits1=list(".RNG.seed"=c(123), ".RNG.name"='base::Wichmann-Hill')
-  inits2=list(".RNG.seed"=c(456), ".RNG.name"='base::Wichmann-Hill')
-  inits3=list(".RNG.seed"=c(789), ".RNG.name"='base::Wichmann-Hill')
-  burnN=5000
-  sampleN=10000
-  ##############################################
-  #Model Organization
-  ############################################
-  
-
-  model_spec<-textConnection(model_string)
-  model_jags<-jags.model(model_spec, 
-                         inits=list(inits1,inits2, inits3),
-                         data=list('y.kid' = t(clean.array.jags[,,'1','ili']),
-                                   'y.adult' = t(clean.array.jags[,,'5','ili']),
-                                   'sqrt.rsv' =sqrt(clean.array.jags[,'Bronx','5','rsv.searches']), #same for all ages and boroughs
-                                   'sqrt.flu' =sqrt(clean.array.jags[,'Bronx','5','flu.rate']), #same for all ages and boroughs
-                                   'n.space'=dim(clean.array.jags)[2],
-                                   'n.time'=dim(clean.array.jags)[1],
-                                   'epiyr.index'=epiyr.index,
-                                   'n.epiyr'=max(epiyr.index),
-                                   'zero'=zero,'S1'=S1 
-                                   ),
-                         n.adapt=burnN, 
-                         n.chains=3)
-  params<-c('diff_hat','non.flu.adult','non.flu.kid', 'lambda.kid', 'lambda.adult')
-  
-  ##############################################
-  #Posterior Sampling
-  ##############################################
-  posterior_samples<-coda.samples(model_jags, 
-                                  params, 
-                                  n.iter=sampleN)
-  posterior_samples.all<-do.call(rbind,posterior_samples)
-  post_means<-apply(posterior_samples.all, 2, median)
-  sample.labs<-names(post_means)
-  posterior_samples.mean<-apply(posterior_samples.all,2,mean)
-  posterior_samples.sd<-apply(posterior_samples.all,2,sd)
-
-  diff_hat_mean<-posterior_samples.mean[grep('diff_hat', names(posterior_samples.mean))]
-  diff_hat_mean<-matrix(diff_hat_mean,ncol=5, byrow=T)
-  
-  non.flu.kid.mean<-posterior_samples.mean[grep('non.flu.kid', names(posterior_samples.mean))]
-    non.flu.kid.mean<-matrix(non.flu.kid.mean,ncol=5, byrow=T)
-
-  non.flu.adult.mean<-posterior_samples.mean[grep('non.flu.adult', names(posterior_samples.mean))]
-    non.flu.adult.mean<-matrix(non.flu.adult.mean,ncol=5, byrow=T)
-    
-```
-
-
-```{r}
-matplot(non.flu.adult.mean)
-matplot(non.flu.kid.mean)
-matplot(diff_hat_mean)
-```
-
-## or alternatively use INLA
+use INLA for stage 1
 ```{r}
 to.test<-c('Bronx','Brooklyn','Manhattan','Queens' ,'Staten Island')
-inla.func<-function(x.test){
+inla.func<-function(x.test, outcome.var){
 clean.array.citywide<-ili.a[,x.test,c('1','5'),]
+epiyr.index.f<-as.factor(epiyr.index)
+epiyr.index.f2<-as.factor(epiyr.index)
 
 y.kids = t(clean.array.citywide[,'1','ili'])
 y.adult = t(clean.array.citywide[,'5','ili'])
@@ -390,13 +244,33 @@ y.adult = t(clean.array.citywide[,'5','ili'])
                  sqrt.flu =sqrt(clean.array.citywide[,'5','flu.rate']) #same for all ages and boroughs
                  sqrt.flu[216]<-sqrt.flu[215]
 t<-1:length(y.kids)
+t2<-1:length(y.kids)
+
 weekN<-rep(1:52, length.out=length(y.kids))
 
-ds.glm<-cbind.data.frame('weekN'=weekN,'y.kids'=y.kids[1,],'y.adult'=y.adult[1,],sqrt.rsv, sqrt.flu, t)
-mod1<-inla(y.adult~ sqrt.rsv+sqrt.flu +f(t, model = "rw2") +f(weekN, model = "rw2"), family='poisson', data=ds.glm)
-plot(mod1) 
+ds.glm<-cbind.data.frame('weekN'=weekN,'y.kids'=y.kids[1,],'y.adult'=y.adult[1,],sqrt.rsv, sqrt.flu, t, t2)
+form1<-as.formula(paste0(outcome.var,"~ f(epiyr.index.f,sqrt.rsv, model='iid')+  f(epiyr.index.f2,sqrt.flu, model='iid') +
+             t2+ 
+             f(t, model = 'iid') +
+             f(weekN, model = 'rw2')" ))
+mod1<-inla(form1, 
+           family='poisson', data=ds.glm, control.predictor = list(compute=TRUE, link = 1)) 
+mod1.mean.re.t<-mod1$summary.random$t$mean 
+mod1.sd.re.t<-mod1$summary.random$t$sd 
 
+out.list<-list(t.mean=mod1.mean.re.t, t.sd=mod1.sd.re.t)
+return(out.list)
+}
+all.mods.kids<-sapply(to.test,inla.func,outcome.var='y.kids' ,simplify=F)
+all.mods.adults<-sapply(to.test,inla.func,outcome.var='y.adult' ,simplify=F)
 
+all.mod.kids.mean<-sapply(all.mods.kids, '[[', "t.mean")
+matplot(all.mod.kids.mean)
+
+all.mod.adult.mean<-sapply(all.mods.adults, '[[', "t.mean")
+matplot(all.mod.adult.mean)
+
+matplot(all.mod.adult.mean-all.mod.kids.mean, type='l')
 ```
 
 ##Stage 2 model:
