--- a/R/syndromic_nyc.Rmd
+++ b/R/syndromic_nyc.Rmd
@@ -250,9 +250,10 @@ weekN<-rep(1:52, length.out=length(y.kids))
 
 ds.glm<-cbind.data.frame('weekN'=weekN,'y.kids'=y.kids[1,],'y.adult'=y.adult[1,],sqrt.rsv, sqrt.flu, t, t2)
 form1<-as.formula(paste0(outcome.var,"~ f(epiyr.index.f,sqrt.rsv, model='iid')+  f(epiyr.index.f2,sqrt.flu, model='iid') +
-             t2+ 
-             f(t, model = 'iid') +
-             f(weekN, model = 'rw2')" ))
+             t2+                      #linear trend 
+             f(t, model = 'iid') +    #unexplained variation
+             f(weekN, model = 'rw2')" #seasonality 
+             ))
 mod1<-inla(form1, 
            family='poisson', data=ds.glm, control.predictor = list(compute=TRUE, link = 1)) 
 mod1.mean.re.t<-mod1$summary.random$t$mean 
@@ -263,14 +264,35 @@ return(out.list)
 }
 all.mods.kids<-sapply(to.test,inla.func,outcome.var='y.kids' ,simplify=F)
 all.mods.adults<-sapply(to.test,inla.func,outcome.var='y.adult' ,simplify=F)
+```
 
-all.mod.kids.mean<-sapply(all.mods.kids, '[[', "t.mean")
+Next extract mean and SD and resample to look at difference
+```{r}
+n.sim=1000
+
+all.mod.kid.mean<-sapply(all.mods.kids, '[[', "t.mean")
+all.mod.kid.sd<-sapply(all.mods.kids, '[[', "t.sd")
+all.mod.adult.mean<-sapply(all.mods.adults, '[[', "t.mean")
+all.mod.adult.sd<-sapply(all.mods.adults, '[[', "t.sd")
+resamp.adult<-rnorm(n=length(all.mod.adult.mean)*n.sim, mean=c(all.mod.adult.mean), sd=c(all.mod.adult.sd))
+resamp.adult<-array(resamp.adult, dim=c(nrow(all.mod.adult.mean), ncol(all.mod.adult.mean), n.sim))
+
+resamp.kid<-rnorm(n=length(all.mod.kid.mean)*n.sim, mean=c(all.mod.kid.mean), sd=c(all.mod.kid.sd))
+resamp.kid<-array(resamp.kid, dim=c(nrow(all.mod.kid.mean), ncol(all.mod.kid.mean), n.sim))
+
+diff.adult.kids<-resamp.adult- resamp.kid
+
+matplot(all.mod.adult.mean)
 matplot(all.mod.kids.mean)
 
-all.mod.adult.mean<-sapply(all.mods.adults, '[[', "t.mean")
-matplot(all.mod.adult.mean)
-
 matplot(all.mod.adult.mean-all.mod.kids.mean, type='l')
+#matplot(diff.adult.kids.mean, type='l')
+
+```
+## Outpput from stage 1 to use in Stage 2
+```{r}
+diff.adult.kids.mean<-apply(diff.adult.kids,c(1,2), mean)
+diff.adult.kids.sd<-apply(diff.adult.kids,c(1,2), sd)
 ```
 
 ##Stage 2 model:
