--- a/R/syndromic_nyc.Rmd
+++ b/R/syndromic_nyc.Rmd
@@ -185,7 +185,7 @@ ccf(ili.a[,'Citywide','1','ili'], ili.a[,'Citywide','1',"rsv.searches"], na.acti
 ```
 
 
-## simple gam with citywide data
+## simple gam with citywide data to test
 ```{r}
 clean.array.citywide<-ili.a[,c('Citywide'),c('1','5'),]
 
@@ -247,10 +247,11 @@ t2<-1:length(y.kids)
 weekN<-rep(1:52, length.out=length(y.kids))
 
 ds.glm<-cbind.data.frame('weekN'=weekN,'y.kids'=y.kids[1,],'y.adult'=y.adult[1,],sqrt.rsv, sqrt.flu, t, t2)
-form1<-as.formula(paste0(outcome.var,"~ f(epiyr.index.f,sqrt.rsv, model='iid')+  f(epiyr.index.f2,sqrt.flu, model='iid') +
-             t2+                      #linear trend 
-             f(t, model = 'ar1') +    #unexplained variation
-             f(weekN, model = 'rw2')" #seasonality 
+form1<-as.formula(paste0(outcome.var,"~ f(epiyr.index.f,sqrt.rsv, model='iid')+   #rsv effect varies by epiyr
+              f(epiyr.index.f2,sqrt.flu, model='iid') + #flu effect, varies by epiyear
+             t2+                      #linear trend   
+             f(t, model = 'iid') +    #unexplained variation..iid or ar1?
+             f(weekN, model = 'rw2', cyclic=T)" #seasonality 
              ))
 mod1<-inla(form1, 
            family='poisson', data=ds.glm, control.predictor = list(compute=TRUE, link = 1),control.compute=list(config=TRUE)) 
@@ -278,11 +279,12 @@ all.mod.kid.mean<-sapply(all.mods.kids, '[[', "t.mean")
 all.mod.kid.sd<-sapply(all.mods.kids, '[[', "t.sd")
 all.mod.adult.mean<-sapply(all.mods.adults, '[[', "t.mean")
 all.mod.adult.sd<-sapply(all.mods.adults, '[[', "t.sd")
+covar1<-cov(c(all.mod.adult.mean),c(all.mod.kid.mean))
 
 #####THIS IS WHAT IS USED IN STAGE 2 
-covar1<-cov(c(all.mod.adult.mean),c(all.mod.kid.mean))
 diff.adult.kids<-all.mod.adult.mean- all.mod.kid.mean
 diff.adult.kids.var<- all.mod.adult.sd^2 +all.mod.kid.sd^2 +2*covar1
+diff.adult.kids.prec<-1/diff.adult.kids.var
 #############
 
 matplot(all.mod.adult.mean, type='l')
@@ -290,8 +292,11 @@ matplot(all.mod.kids.mean, type='l')
 
 matplot(diff.adult.kids, type='l')
 
+#Correlation between random effect and flu
+apply( all.mod.adult.mean, 2, function(x) cor(x,ds.glm$sqrt.flu))
+
 ```
-#compare to scaled data
+compare to scaled data
 ```{r}
 scale.ili<-apply(clean.array.jags[,,'5','ili'],2,scale)
 matplot(scale.ili, type='l')
@@ -299,4 +304,91 @@ matplot(scale.ili, type='l')
 
 
 ##Stage 2 model:
+```{r}
+###############
+#JAGS Model
+###############
+model_string_stage2<-"
+
+model{
+
+for(i in 1:n.space){
+
+   for(t in 1:n.time){
+
+      y_hat[i,t] ~ dnorm(y[i,t], post_var_inv[i,t])
+      y[i,t] ~ dnorm(mu[i,t], sigma2_epsilon_inv) 
+      mu[i,t] <-         
+                 beta0 + beta0_space[i] +  #x[i,t,]%*%gamma + 
+                 (beta1 + beta1_space[i])*(t - theta_space[i])*ifelse((t >= theta_space[i]), 1, 0)
+
+      }
+
+   beta0_space[i] ~ dnorm(0.00, 0.0001)
+   beta1_space[i] ~ dnorm(0.00, 0.0001)
+   theta_space[i] ~ dcat(pi)
+
+   }
+
+sigma2_epsilon_inv <- 1/sigma2_epsilon
+sigma2_epsilon ~ dgamma(0.01, 0.01)
+beta0 ~ dnorm(0.00, 0.0001)
+beta1 ~ dnorm(0.00, 0.0001)
+#for(j in 1:p_x){
+#   gamma[j] ~ dnorm(0.00, 0.0001)
+#   }
+pi ~ ddirch(alpha[1:n.time])
+for(j in 1:n.time){
+   alpha[j]<-1.00
+   }
+
+}
+"
+
+
+```
+
+call the 2nd stage model
+```{r}
+##############################################################
+#Model Fitting
+##############################################################
+inits1=list(".RNG.seed"=c(123), ".RNG.name"='base::Wichmann-Hill')
+inits2=list(".RNG.seed"=c(456), ".RNG.name"='base::Wichmann-Hill')
+inits3=list(".RNG.seed"=c(789), ".RNG.name"='base::Wichmann-Hill')
+
+
+##############################################
+#Model Organization
+##############################################
+model_spec<-textConnection(model_string_stage2)
+model_jags<-jags.model(model_spec, 
+                       inits=list(inits1,inits2, inits3),
+                       data=list('y_hat' = t(diff.adult.kids),
+                                 'post_var_inv' = 1/t(diff.adult.kids.prec),
+                                 'n.space' = ncol(diff.adult.kids),
+                                 'n.time'= nrow(diff.adult.kids)),
+                       n.adapt=5000, 
+                       n.chains=3)
+
+params<-c('theta_space',
+          'beta1_space','beta1')
+
+##############################################
+#Posterior Sampling
+##############################################
+posterior_samples<-coda.samples(model_jags, 
+                                params, 
+                                n.iter=10000)
+posterior_samples.all<-do.call(rbind,posterior_samples)
+#post1.summary<-summary(posterior_samples)
+#post_means<-colMeans(posterior_samples.all)
+post_means<-apply(posterior_samples.all, 2, median)
+sample.labs<-names(post_means)
+ci<-t(hdi(posterior_samples.all, credMass = 0.95))
+ci<-matrix(sprintf("%.1f",round(ci,1)), ncol=2)
+row.names(ci)<-sample.labs
+post_means<-sprintf("%.1f",round(post_means,1))
+names(post_means)<-sample.labs
+```
 
